# Auto-Boat

./: .gitignore  .gitmodules  README.md  usefulcmd.txt
pandar20B/.catkin_tools/profiles/default/: devel_collisions.txt
pandar20B/devel/: .catkin  .rosinstall  local_setup.sh
pandar20B/devel/include/hesai_lidar/: PandarPacket.h
pandar20B/install/: .rosinstall  _setup_util.py
pandar20B/logs/hesai_lidar/: build.make.000.log.stderr
pcl_new_ws/devel/: .catkin
pcl_new_ws/src/pcl_test/: CMakeLists.txt
pcl_new_ws_new/devel/: .catkin
pcl_new_ws_new/src/: pcl_test.tar.xz
pcl_new_ws_new/src/launch/: pcl_test.launch
pcl_new_ws_new/src/pcl_test/: CMakeLists.txt  CMakeLists1.txt
pcl_new_ws_new/src/pcl_test/src/: pcl_test_core.cpp  pcl_test_core.h  pcl_test_core_old.cpp  pcl_test_node.cpp
task1/: data_log.csv  task1.bag
task1/devel/: .catkin  .rosinstall  local_setup.sh
task2/: data_log.csv
task2/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
task3/: data_log.csv
task3/devel/: .catkin  .rosinstall  local_setup.sh
task3/src/boat/: boat.launch
task4/: data_log.csv
task4-2/: data_log.csv
task4-2/devel/: .catkin  local_setup.sh
task4-3/: data_log.csv
task4-3/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
task4/devel/: .catkin
track_ws/: track_log.csv
track_ws/devel/: .catkin  setup.sh
track_ws/src/launch/: track_ws.launch
track_ws/src/print_the_track/: CMakeLists.txt  print_the_track.cpp
track_ws/src/send_gps/: send_gps.cpp
track_ws/src/track/: CMakeLists.txt  lat.py  track.cpp  track.csv  track.launch
(+64 files in other folders)
